--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,34 @@
+
+html {
+  font-size: 10px;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  background-color: rgb(245, 245, 241);
+  color: #333;
+}
+
+p {
+  font-size: 1.6rem;
+}
+
+samll {
+  font-size: 1.2rem;
+}
+
 .App {
-  text-align: center;
+  /* text-align: center; */
+  margin: 0 auto;
+  max-width: 1000px;
+  padding: 40px;
+}
+
+.title {
+  font-size: 4.4erm;
 }
