--- a/src/styles/SearchMovies.css
+++ b/src/styles/SearchMovies.css
@@ -1,3 +1,47 @@
 .form{
     display: grid;
+    
 }
+
+.lable {
+    font-size: 1.6rem;
+    margin-bottom: 0.2rem;
+    text-transform: uppercase;
+}
+
+.input {
+    font-size: 1.6rem;
+    margin-bottom: 1rem;
+    padding: 0.5rem 2rem;
+    border-radius: 20px;
+    border: 1px solid #ddd;
+    line-height: 2.8rem;
+}
+
+.button {
+    background-color: rgb(0,0,0,0.75);
+    color: white;
+    padding: 1rem 2rem;
+    border: 1px solid rgb(0,0,0,0.75);   
+    border-radius: 20px;
+    font-size: 1.4rem;
+    cursor: pointer;
+    transition:  background-color 250ms;
+}
+
+.button:hover {
+    background-color: rgb(0,0,0,0.85);
+}
+
+@media (min-width:786px){
+    .form {
+        grid-template-columns: auto 1fr auto;
+        grid-gap: 1rem;
+        align-items: center;
+    }
+
+    .input { 
+        margin-bottom: 0;
+    }
+}
+
